# EEG

./: .gitignore  CANONICAL_WIRING.md  Description  FFTLineRealtime.py  FFTVideo.py  PHASES.md  PipelineTest.py  README.md  README_scaffold.md  SeizureDetectionPipeline.py  SeizureDetectionPipelines.py  SingleChannel.py  animate_comparison_video.m  animate_comparison_video_for_subject.m  animate_dog1_ictal_sliding_window.m  animate_ictal_lines.m  animate_preictal_segment.m  chart_test.py  eeg_clip_browser.m  export_channel_comparison_video.m  extract_eeg_features.m  extract_features_from_windows.m  features.py  generate_dog1_comparison_video.m  generate_dog1_comparison_videos_batch.m  generate_kaggle_submission.m  heatmap1.m  import.py  kaggle_combined_submission.csv  latticeconfiguration.html  load_all_segments.m  load_subject_sequences.py  loader.py  main.py  patient_1_submission.csv  patient_2_submission.csv  pipeline.py  pyproject.toml  render_channel_comparison_frame.m  segment_into_windows.m  (+4 more)
3dprinting/: BackLatticePins.stl  M4_Hardware_09_Eholder2.stl  M4_Hardware_09_Eholder_Notched.stl  M4_Hardware_09_Eholder_V2.stl  M4_Hardware_09_Eholder_v3.stl  M4_Hardware_09_Eholder_v4.stl  M4_Hardware_09_Eholder_v5.stl  M4_Insert_101pct.stl  M4_Insert_102pct.stl  M4_Medium_Back_screws.stl  M4_Medium_Front_screws.stl  M4_Node_4d.gcode  M4_Node_4d.stl  M4_Wire_Clip.gcode  first_layer_test.gcode
Matlab/: KaggleCombined.m  PipelineTest.m  SeizureDetectionPipelines.m  animate_dog1_ictal_interictal_scroll.m  animate_ictal_heatmaps.m  animate_ictal_lines.m  build_subject_dataset.m  (+16 more)
(+82 files in other folders)
